--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/CDC-1.1%Foundation-1.1"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.29-bin.jar"/>
-	<classpathentry kind="output" path="bin"/>
+    <classpathentry kind="lib" path="lib/mariadb-java-client-3.0.4.jar"/>
+    <classpathentry kind="output" path="bin"/>
 </classpath>
